# csound-instruments

./: .gitignore  CMakeLists.txt  config-test.json  package.json  test-config.json
combos/: body-tracking-a1.csd  body-tracking-a1.json  body-tracking-b1.csd  body-tracking-b1.json  combo-a1.csd  combo-a1.csd.snaps  combo-a1.json  combo-a2.csd  combo-a2.csd.snaps  combo-a2.json  combo-b1.csd  combo-b1.json  snap-drums-a1.csd  snap-drums-a1.json
components/: oscillator-01.orc  oscillator-01.ui.json
csd/: subtractive-synth-01.RPP  subtractive-synth-01.csd  subtractive-synth-01.ui.json
effects/: effect-a1.csd  effect-a1.json  reverb-a1.csd  reverb-a1.json
instruments/: hand-grains-a4.csd  hand-grains-a4.json  hand-sines-a3.csd  hand-sines-a3.json  subtract-synth-01.csd  subtract-synth-01.ui.json  subtractive-synth-01.csd  subtractive-synth-01.ui.json  synth-a.csd  synth-a.json  synth-a1.csd  synth-a1.csd.snaps  synth-a1.json  synth-a2.csd  synth-a2.csd.snaps  synth-a2.json
modules/: body-tracking-a.json  body-tracking-a.orc  clamp-a.json  clamp-a.orc  delay-mono-a.json  delay-mono-a.orc  delay-stereo-a.json  delay-stereo-a.orc  diskgrain-a.json  diskgrain-a.orc  envelope-01.orc  envelope-01.ui.json  envelope-a.json  envelope-a.orc  filter-01.orc  filter-01.ui.json  filter-a.json  filter-a.orc  filter-b.json  filter-b.orc  fn-x-a.json  fn-x-a.orc  grain3-a.json  grain3-a.orc  lfo-a.json  lfo-a.orc  midi-key-range-a.json  midi-key-range-a.orc  midi-key-transpose-a.json  midi-key-transpose-a.orc  offset-a.json  offset-a.orc  polyphony-control-a.json  polyphony-control-a.orc  polyphony-control-b.json  polyphony-control-b.orc  reverb-a.json  reverb-a.orc  snap-trigger-a.json  snap-trigger-a.orc  (+8 more)
modules/shared/: filter.orc
opcodes/: polyphonyControl.json  polyphonyControl.orc
shared/: common-ui-types.json  component-types.ui.json  module-constants.json  module-ui-types.json
shared/csound/macros/: common-body-tracking-macros.orc  common-math-defines.orc
shared/json/: module-ui-types.json
styles/: default.json
tests/modules/: polyphony-control-b--test.csd
z/: .testing.RPP  240112-2329--combo-a1-wip.RPP
z-reaper/: .current-template--combo-a1.RPP  240104-2345--messing-around-with-piano-delays-and-string-synth.RPP  240111-0908--xr-testing.RPP  240112-2219--combo-a1-wip.RPP  240112-2329--combo-a1-wip.RPP  240113-1556--polyphony-control-testing.RPP  240209-2204--combo-a1-template.RPP  240209-2204--combo-a1-wip.RPP  240223-2304--body-tracking-audio-track-wip.RPP  240224-1437--body-tracking-wip.RPP  240228-1952--combo-a1-wip.RPP  240301-2311--combo-a1-wip.RPP  240302-1428--combo-a1-wip.RPP  240302-1758--combo-a1-wip.RPP  240302-1830--combo-a1-wip.RPP  240302-1900--combo-a1-wip.RPP  240303-1920--combo-a1-wip.RPP  240303-2148--combo-a1-wip.RPP  240523-2327--body-tracking-b1-testing.RPP
z-repros/: .template.csd  expcurve.csd
